# weight-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.py  core.cpp  core.py  data.csv  intermain.ipynb  main.cpp  main.py  main.rs  mycode.cpp  plotter.cpp  plotter.h  plotter.hpp
include/: core.hpp
src/: core.cpp  main.cpp  plotter.cpp
